# backend-for-onlineshop

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yaml  order.csv  pyproject.toml  requirements.txt
mysite/: data.json  demo.py  log.txt
mysite/blogapp/: admin.py  models.py  sitemap.py  urls.py  views.py
mysite/blogapp/migrations/: 0001_initial.py  0002_alter_article_pub_date.py
mysite/blogapp/templates/blogapp/: article_form.html  article_list.html  blog_details.html  forms.py
mysite/locale/en/LC_MESSAGES/: django.po
mysite/locale/ru/LC_MESSAGES/: django.po
mysite/myapiapp/: serializers.py  urls.py  views.py
mysite/myauth/: forms.py  models.py  tests.py  urls.py  views.py
mysite/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py  0003_alter_profile_avatar.py  0004_alter_profile_avatar.py
mysite/mysite/: settings.py  sitemaps.py  urls.py
mysite/shopapp/: admin.py  forms.py  models.py  serializers.py  sitemap.py  test.sql  tests.py  urls.py  utils.py  views.py
mysite/shopapp/fixtures/: orders-fixtures.json  products-fixture.json  users-fixtures.json
mysite/shopapp/migrations/: 0007_alter_product_options.py  0008_product_created_by_alter_order_user.py  0009_alter_order_user_alter_product_created_by.py  0009_product_preview.py  0010_alter_product_created_by.py  0010_productimage.py  0011_order_receipt_alter_product_created_by.py  0012_product_preview.py  0013_productimage.py  0014_merge_0010_productimage_0013_productimage.py  0015_alter_order_options_alter_product_options_and_more.py
(+26 files in other folders)
